--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4"
   }
 }
