--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node ./server"
+    "start": "nodemon ./server"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -12,7 +12,7 @@
     "mongoose": "^6.7.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "socket.io": "^4.5.4"
   }
 }
